[gd_scene load_steps=4 format=2]

[ext_resource path="res://AbilityButton.gd" type="Script" id=1]
[ext_resource path="res://crescent-blade.svg" type="Texture" id=2]

[sub_resource type="BitmapFont" id=1]

[node name="AbilityButton" type="Node2D"]

[node name="AbilityButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="TextureProgress" parent="AbilityButton"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
anchor_right = 1.0
anchor_bottom = 1.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="AbilityButton/Sweep"]
one_shot = true

[node name="GcdSweep" type="TextureProgress" parent="AbilityButton"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
anchor_right = 1.0
anchor_bottom = 1.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GcdTimer" type="Timer" parent="AbilityButton/GcdSweep"]
one_shot = true

[node name="Counter" type="MarginContainer" parent="AbilityButton"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="AbilityButton/Counter"]
margin_right = 512.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "0.0"
align = 2
clip_text = true

[connection signal="pressed" from="AbilityButton" to="AbilityButton" method="_on_AbilityButton_pressed"]
[connection signal="timeout" from="AbilityButton/Sweep/Timer" to="AbilityButton" method="_on_Timer_timeout"]
[connection signal="timeout" from="AbilityButton/GcdSweep/GcdTimer" to="AbilityButton" method="_on_GcdTimer_timeout"]
